# executionrl

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
data/: price_series.csv
include/: config.hpp
include/agents/: QLearningAgent.cpp  QLearningAgent.hpp
include/core/: ExecutionSimulator.cpp  ExecutionSimulator.hpp
include/env/: MarketEnvironment.cpp  MarketEnvironment.hpp
include/utils/: Logger.cpp  MathUtils.cpp  MathUtils.hpp
src/: main.cpp
tests/: test_agent.cpp  test_env.cpp  test_simulation.cpp
